# pythonmockone

./: .gitignore  licence.txt  pyproject.toml  readme.md  requirements.txt
app/: main.py  models.py
app/core/: main.py  models.py
test/: test_main.py
tests/: test_main.py
